# System-Cache-Monitor

./: Cargo.toml  README.md  System Cache Monitor.bat  cache_monitor.py  run.bat  settings.toml.example
crates/actions/: Cargo.toml
crates/actions/src/: archiver.rs  cleaner.rs  lib.rs  undo_cleaner.rs
crates/app/: Cargo.toml
crates/app/src/: main.rs  tray.rs  ui.rs
crates/core/: Cargo.toml
crates/core/src/: archive.rs  classifier.rs  disk_map.rs  duplicates.rs  env_manager.rs  file_migrator.rs  junction_manager.rs  lib.rs  logger.rs  rules.rs  scanner.rs  settings.rs
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs
docs/: PRD.md
