[package]
name = "cache-advisor"
version.workspace = true
edition.workspace = true
default-run = "cache-advisor"

[dependencies]
ca-core = { path = "../core" }
ca-actions = { path = "../actions" }
eframe = "0.29"
egui = "0.29"
egui_extras = "0.29"
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde_json = { workspace = true }
jiff = { workspace = true }

# The LLM crate is optional and pulls in a large C++ build (llama.cpp).
# Enable with: cargo build --release --features ai
ca-llm = { path = "../llm", optional = true }

[features]
default = []
ai = ["dep:ca-llm"]
