[package]
name = "ca-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
walkdir = { workspace = true }
rayon = { workspace = true }
sha2 = { workspace = true }
jiff = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
